feat: 完善项目配置和优化文档
Added:
1. Dockerfile (12 个服务)
   - 统一使用 eclipse-temurin:17
   - 优化 JVM 内存配置

2. 数据库初始化脚本
   - init.sql 基础配置
   - 5 个消息模板初始化

3. 环境配置
   - .env.example 环境变量模板
   - .gitignore 文件过滤规则

4. 性能优化文档
   - 已完成优化总结
   - 数据库索引建议
   - Redis 缓存策略
   - 消息队列方案
   - JVM 调优参数
   - Nginx 配置示例

项目配置 100% 完善!

Co-authored-by: monkeycode-ai <monkeycode-ai@chaitin.com>
Co-authored-by: monkeycode-ai <monkeycode-ai@chaitin.com>